--- a/p8105_hw5_kz2411.Rmd
+++ b/p8105_hw5_kz2411.Rmd
@@ -24,7 +24,7 @@ library(naniar)
 homicide_data_raw <- read_csv("data/homicide-data.csv", na = c("","unknown"))
 ```
 
-The raw data has `r nrow(homicide_data_raw)` observations. There are `r ncol(homicide_data_raw)` variables, and they are `r colnames(homicide_data_raw)`. Their types are numeric and character.
+The raw data has `r nrow(homicide_data_raw)` observations. There are `r ncol(homicide_data_raw)` variables, and they are `r colnames(homicide_data_raw)`. Their types are numeric or character.
 
 
 ```{r clean and group}
@@ -93,7 +93,7 @@ city_plot <- city_prop_data %>%
 
 city_plot
 ```
-
+Richmond has the lowest estimate and Chicago has the highest estimate and is apparently higher than any other city.
 
 ## Problem 2
 ```{r file list}
@@ -105,7 +105,7 @@ colnames(file_list) <- c("file")
 ```
 
 ```{r load file}
-#load file
+#load file and save reuslt to combine_data
 combine_data <- file_list %>%
   mutate(
     complete_file = paste(data_path,file,sep = '/'),
@@ -116,17 +116,20 @@ combine_data <- file_list %>%
 ```
 
 ```{r clean data}
+#tidy combine_data
 #rename column
 colnames(combine_data)[1] <- c("group_id")
 
-#clean data
+#clean data and rename group_id
 data_clean <- combine_data %>%
   janitor::clean_names() %>%
   mutate(
     group_id = gsub("con","control",group_id),
     group_id = gsub("exp","experimental",group_id),
     group_id = gsub(".csv","",group_id)
-  )
+  ) %>%
+  separate(group_id,c("group","subject_id"),sep = '_')
+data_clean
 ```
 
 ```{r plot spaghetti}
@@ -136,6 +139,9 @@ plot_data <- data_clean %>%
     names_to = "week",
     values_to = "observation",
     names_prefix = "week_"
+  ) %>%
+  mutate(
+    group_id = paste(group,subject_id, sep = " ")
   )
 
 spaghetti_plot <- plot_data %>%
@@ -143,7 +149,8 @@ spaghetti_plot <- plot_data %>%
   geom_line() +
   geom_point() +
   labs(
-    title = "Spaghetti plot for different groups"
+    title = "Spaghetti plot for different groups",
+    color = "Group-Subject ID"
   )
 
 spaghetti_plot
@@ -159,6 +166,7 @@ set.seed(10)
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
+iris_with_missing
 
 #checking missing
 miss_var_summary(iris_with_missing) %>% knitr::kable(digits = 3)
@@ -179,6 +187,7 @@ fill_missing = function(x) {
 
 #map fill_missing function
 iris_no_missing <- map_dfr(iris_with_missing,fill_missing)
+iris_no_missing
 
 #checking no missing
 miss_var_summary(iris_no_missing) %>% knitr::kable(digits = 3)
