--- a/p8105_hw5_kz2411.md
+++ b/p8105_hw5_kz2411.md
@@ -24,7 +24,7 @@ homicide_data_raw <- read_csv("data/homicide-data.csv", na = c("","unknown"))
 The raw data has 52179 observations. There are 12 variables, and they
 are uid, reported\_date, victim\_last, victim\_first, victim\_race,
 victim\_age, victim\_sex, city, state, lat, lon, disposition. Their
-types are numeric and character.
+types are numeric or character.
 
 ``` r
 #clean and group
@@ -135,6 +135,8 @@ city_plot
 ```
 
 <img src="p8105_hw5_kz2411_files/figure-gfm/plot city-1.png" width="80%" />
+Richmond has the lowest estimate and Chicago has the highest estimate
+and is apparently higher than any other city.
 
 ## Problem 2
 
@@ -147,7 +149,7 @@ colnames(file_list) <- c("file")
 ```
 
 ``` r
-#load file
+#load file and save reuslt to combine_data
 combine_data <- file_list %>%
   mutate(
     complete_file = paste(data_path,file,sep = '/'),
@@ -358,18 +360,45 @@ combine_data <- file_list %>%
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
+#tidy combine_data
 #rename column
 colnames(combine_data)[1] <- c("group_id")
 
-#clean data
+#clean data and rename group_id
 data_clean <- combine_data %>%
   janitor::clean_names() %>%
   mutate(
     group_id = gsub("con","control",group_id),
     group_id = gsub("exp","experimental",group_id),
     group_id = gsub(".csv","",group_id)
-  )
+  ) %>%
+  separate(group_id,c("group","subject_id"),sep = '_')
+data_clean
 ```
+
+    ## # A tibble: 20 × 10
+    ##    group      subject_id week_1 week_2 week_3 week_4 week_5 week_6 week_7 week_8
+    ##    <chr>      <chr>       <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>
+    ##  1 control    01           0.2   -1.31   0.66   1.96   0.23   1.09   0.05   1.94
+    ##  2 control    02           1.13  -0.88   1.07   0.17  -0.83  -0.31   1.58   0.44
+    ##  3 control    03           1.77   3.11   2.22   3.26   3.31   0.89   1.88   1.01
+    ##  4 control    04           1.04   3.66   1.22   2.33   1.47   2.7    1.87   1.66
+    ##  5 control    05           0.47  -0.58  -0.09  -1.37  -0.32  -2.17   0.45   0.48
+    ##  6 control    06           2.37   2.5    1.59  -0.16   2.08   3.07   0.78   2.35
+    ##  7 control    07           0.03   1.21   1.13   0.64   0.49  -0.12  -0.07   0.46
+    ##  8 control    08          -0.08   1.42   0.09   0.36   1.18  -1.16   0.33  -0.44
+    ##  9 control    09           0.08   1.24   1.44   0.41   0.95   2.75   0.3    0.03
+    ## 10 control    10           2.14   1.15   2.52   3.44   4.26   0.97   2.73  -0.53
+    ## 11 experimen… 01           3.05   3.67   4.84   5.8    6.33   5.46   6.38   5.91
+    ## 12 experimen… 02          -0.84   2.63   1.64   2.58   1.24   2.32   3.11   3.78
+    ## 13 experimen… 03           2.15   2.08   1.82   2.84   3.36   3.61   3.37   3.74
+    ## 14 experimen… 04          -0.62   2.54   3.78   2.73   4.49   5.82   6      6.49
+    ## 15 experimen… 05           0.7    3.33   5.34   5.57   6.9    6.66   6.24   6.95
+    ## 16 experimen… 06           3.73   4.08   5.4    6.41   4.87   6.09   7.66   5.83
+    ## 17 experimen… 07           1.18   2.35   1.23   1.17   2.02   1.61   3.13   4.88
+    ## 18 experimen… 08           1.37   1.43   1.84   3.6    3.8    4.72   4.68   5.7 
+    ## 19 experimen… 09          -0.4    1.08   2.66   2.7    2.8    2.64   3.51   3.27
+    ## 20 experimen… 10           1.09   2.8    2.8    4.3    2.25   6.57   6.09   4.64
 
 ``` r
 plot_data <- data_clean %>%
@@ -378,6 +407,9 @@ plot_data <- data_clean %>%
     names_to = "week",
     values_to = "observation",
     names_prefix = "week_"
+  ) %>%
+  mutate(
+    group_id = paste(group,subject_id, sep = " ")
   )
 
 spaghetti_plot <- plot_data %>%
@@ -385,7 +417,8 @@ spaghetti_plot <- plot_data %>%
   geom_line() +
   geom_point() +
   labs(
-    title = "Spaghetti plot for different groups"
+    title = "Spaghetti plot for different groups",
+    color = "Group-Subject ID"
   )
 
 spaghetti_plot
@@ -394,9 +427,9 @@ spaghetti_plot
 <img src="p8105_hw5_kz2411_files/figure-gfm/plot spaghetti-1.png" width="80%" />
 
 From the plot, we can see that those from the experimental arm have
-higher observations than those form the control arm. And observations of
-those from the experimental arm increase over time, while observations
-of those from the control arm fluctuate up and down.
+higher observations than those form the control arm during week 8. And
+observations of those from the experimental arm increase over time,
+while observations of those from the control arm fluctuate up and down.
 
 ## Problem 3
 
@@ -407,7 +440,25 @@ set.seed(10)
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
+iris_with_missing
+```
 
+    ## # A tibble: 150 × 5
+    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1          5.1         3.5          1.4         0.2 setosa 
+    ##  2          4.9         3            1.4         0.2 setosa 
+    ##  3          4.7         3.2          1.3         0.2 setosa 
+    ##  4          4.6         3.1          1.5        NA   setosa 
+    ##  5          5           3.6          1.4         0.2 setosa 
+    ##  6          5.4         3.9          1.7         0.4 setosa 
+    ##  7         NA           3.4          1.4         0.3 setosa 
+    ##  8          5           3.4          1.5         0.2 setosa 
+    ##  9          4.4         2.9          1.4         0.2 setosa 
+    ## 10          4.9         3.1         NA           0.1 setosa 
+    ## # … with 140 more rows
+
+``` r
 #checking missing
 miss_var_summary(iris_with_missing) %>% knitr::kable(digits = 3)
 ```
@@ -435,7 +486,25 @@ fill_missing = function(x) {
 
 #map fill_missing function
 iris_no_missing <- map_dfr(iris_with_missing,fill_missing)
+iris_no_missing
+```
 
+    ## # A tibble: 150 × 5
+    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1         5.1          3.5         1.4         0.2  setosa 
+    ##  2         4.9          3           1.4         0.2  setosa 
+    ##  3         4.7          3.2         1.3         0.2  setosa 
+    ##  4         4.6          3.1         1.5         1.19 setosa 
+    ##  5         5            3.6         1.4         0.2  setosa 
+    ##  6         5.4          3.9         1.7         0.4  setosa 
+    ##  7         5.82         3.4         1.4         0.3  setosa 
+    ##  8         5            3.4         1.5         0.2  setosa 
+    ##  9         4.4          2.9         1.4         0.2  setosa 
+    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ## # … with 140 more rows
+
+``` r
 #checking no missing
 miss_var_summary(iris_no_missing) %>% knitr::kable(digits = 3)
 ```
