--- a/p8105_hw5_kz2411.md
+++ b/p8105_hw5_kz2411.md
@@ -135,6 +135,7 @@ city_plot
 ```
 
 <img src="p8105_hw5_kz2411_files/figure-gfm/plot city-1.png" width="80%" />
+
 Richmond has the lowest estimate and Chicago has the highest estimate
 and is apparently higher than any other city.
 
@@ -373,32 +374,31 @@ data_clean <- combine_data %>%
     group_id = gsub(".csv","",group_id)
   ) %>%
   separate(group_id,c("group","subject_id"),sep = '_')
-data_clean
+data_clean %>% knitr::kable(digits = 3)
 ```
 
-    ## # A tibble: 20 × 10
-    ##    group      subject_id week_1 week_2 week_3 week_4 week_5 week_6 week_7 week_8
-    ##    <chr>      <chr>       <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>  <dbl>
-    ##  1 control    01           0.2   -1.31   0.66   1.96   0.23   1.09   0.05   1.94
-    ##  2 control    02           1.13  -0.88   1.07   0.17  -0.83  -0.31   1.58   0.44
-    ##  3 control    03           1.77   3.11   2.22   3.26   3.31   0.89   1.88   1.01
-    ##  4 control    04           1.04   3.66   1.22   2.33   1.47   2.7    1.87   1.66
-    ##  5 control    05           0.47  -0.58  -0.09  -1.37  -0.32  -2.17   0.45   0.48
-    ##  6 control    06           2.37   2.5    1.59  -0.16   2.08   3.07   0.78   2.35
-    ##  7 control    07           0.03   1.21   1.13   0.64   0.49  -0.12  -0.07   0.46
-    ##  8 control    08          -0.08   1.42   0.09   0.36   1.18  -1.16   0.33  -0.44
-    ##  9 control    09           0.08   1.24   1.44   0.41   0.95   2.75   0.3    0.03
-    ## 10 control    10           2.14   1.15   2.52   3.44   4.26   0.97   2.73  -0.53
-    ## 11 experimen… 01           3.05   3.67   4.84   5.8    6.33   5.46   6.38   5.91
-    ## 12 experimen… 02          -0.84   2.63   1.64   2.58   1.24   2.32   3.11   3.78
-    ## 13 experimen… 03           2.15   2.08   1.82   2.84   3.36   3.61   3.37   3.74
-    ## 14 experimen… 04          -0.62   2.54   3.78   2.73   4.49   5.82   6      6.49
-    ## 15 experimen… 05           0.7    3.33   5.34   5.57   6.9    6.66   6.24   6.95
-    ## 16 experimen… 06           3.73   4.08   5.4    6.41   4.87   6.09   7.66   5.83
-    ## 17 experimen… 07           1.18   2.35   1.23   1.17   2.02   1.61   3.13   4.88
-    ## 18 experimen… 08           1.37   1.43   1.84   3.6    3.8    4.72   4.68   5.7 
-    ## 19 experimen… 09          -0.4    1.08   2.66   2.7    2.8    2.64   3.51   3.27
-    ## 20 experimen… 10           1.09   2.8    2.8    4.3    2.25   6.57   6.09   4.64
+| group        | subject\_id | week\_1 | week\_2 | week\_3 | week\_4 | week\_5 | week\_6 | week\_7 | week\_8 |
+|:-------------|:------------|--------:|--------:|--------:|--------:|--------:|--------:|--------:|--------:|
+| control      | 01          |    0.20 |   -1.31 |    0.66 |    1.96 |    0.23 |    1.09 |    0.05 |    1.94 |
+| control      | 02          |    1.13 |   -0.88 |    1.07 |    0.17 |   -0.83 |   -0.31 |    1.58 |    0.44 |
+| control      | 03          |    1.77 |    3.11 |    2.22 |    3.26 |    3.31 |    0.89 |    1.88 |    1.01 |
+| control      | 04          |    1.04 |    3.66 |    1.22 |    2.33 |    1.47 |    2.70 |    1.87 |    1.66 |
+| control      | 05          |    0.47 |   -0.58 |   -0.09 |   -1.37 |   -0.32 |   -2.17 |    0.45 |    0.48 |
+| control      | 06          |    2.37 |    2.50 |    1.59 |   -0.16 |    2.08 |    3.07 |    0.78 |    2.35 |
+| control      | 07          |    0.03 |    1.21 |    1.13 |    0.64 |    0.49 |   -0.12 |   -0.07 |    0.46 |
+| control      | 08          |   -0.08 |    1.42 |    0.09 |    0.36 |    1.18 |   -1.16 |    0.33 |   -0.44 |
+| control      | 09          |    0.08 |    1.24 |    1.44 |    0.41 |    0.95 |    2.75 |    0.30 |    0.03 |
+| control      | 10          |    2.14 |    1.15 |    2.52 |    3.44 |    4.26 |    0.97 |    2.73 |   -0.53 |
+| experimental | 01          |    3.05 |    3.67 |    4.84 |    5.80 |    6.33 |    5.46 |    6.38 |    5.91 |
+| experimental | 02          |   -0.84 |    2.63 |    1.64 |    2.58 |    1.24 |    2.32 |    3.11 |    3.78 |
+| experimental | 03          |    2.15 |    2.08 |    1.82 |    2.84 |    3.36 |    3.61 |    3.37 |    3.74 |
+| experimental | 04          |   -0.62 |    2.54 |    3.78 |    2.73 |    4.49 |    5.82 |    6.00 |    6.49 |
+| experimental | 05          |    0.70 |    3.33 |    5.34 |    5.57 |    6.90 |    6.66 |    6.24 |    6.95 |
+| experimental | 06          |    3.73 |    4.08 |    5.40 |    6.41 |    4.87 |    6.09 |    7.66 |    5.83 |
+| experimental | 07          |    1.18 |    2.35 |    1.23 |    1.17 |    2.02 |    1.61 |    3.13 |    4.88 |
+| experimental | 08          |    1.37 |    1.43 |    1.84 |    3.60 |    3.80 |    4.72 |    4.68 |    5.70 |
+| experimental | 09          |   -0.40 |    1.08 |    2.66 |    2.70 |    2.80 |    2.64 |    3.51 |    3.27 |
+| experimental | 10          |    1.09 |    2.80 |    2.80 |    4.30 |    2.25 |    6.57 |    6.09 |    4.64 |
 
 ``` r
 plot_data <- data_clean %>%
@@ -485,7 +485,7 @@ fill_missing = function(x) {
 }
 
 #map fill_missing function
-iris_no_missing <- map_dfr(iris_with_missing,fill_missing)
+iris_no_missing <- map_df(iris_with_missing,fill_missing)
 iris_no_missing
 ```
 
